k8s/crudservice-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata: 
  name: crudservice-deployment
  namespace: crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudservice
  template:
    metadata:
      labels:
        app: crudservice
    spec:
      containers: 
        - name: crudservice-container 
          image: udaykumar550/crudservice:latest
          ports:
            - containerPort: 8000
