k8s/crudservice-mysql-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: crudservice-mysql-statefulset
  namespace: crud
spec:
  serviceName: crudservice-mysql-service
  replicas: 1
  selector:
    matchLabels:
      app: crudservice-mysql
  template:
    metadata:
      labels:
        app: crudservice-mysql
    spec:
      containers:
        - name: crudservice-mysql-container
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: crudservice-volume
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: crudservice-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
