k8s/userservice-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: userservice-deployment
  namespace: crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice-container
          image: udaykumar550/userservice:latest
          ports:
            - containerPort: 8080
