k8s/userservice-mysql-statefulset.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: userservice-mysql-statefulset
  namespace: crud
spec:
  serviceName: userservice-mysql-service
  replicas: 2
  selector:
    matchLabels:
      app: userservice-mysql
  template:
    metadata:
      labels: 
        app: userservice-mysql
    spec:
      containers: 
        - name: userservice-mysql-container
          image: mysql:latest
          ports: 
            - containerPort: 3306
          volumeMounts:
            - name: userservice-volume
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: userservice-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
