k8s/crudservice-mysql-service.yml
kind: Service
apiVersion: v1
metadata:
  name: crudservice-mysql-service
  namespace: crud
spec:
  selector:
    app: crudservice-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
