k8s/crudservice-service.yml
kind: Service
apiVersion: v1
metadata:
  name: crudservice-service
  namespace: crud
spec:
  selector:
    app: crudservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
