k8s/userservice-mysql-service.yml
kind: Service
apiVersion: v1
metadata:
  name: userservice-mysql-service
  namespace: crud
spec:
  selector:
    app: userservice-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
