k8s/virtual-service.yml
# Istio VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: crud-routing
  namespace: crud
spec:
  hosts:
    - "*"
  gateways:
    - crud-gateway
  http:
    - match:
        - uri:
            prefix: "/users"
      route:
        - destination:
            host: userservice-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: "/cruds"
      route:
        - destination:
            host: crudservice-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: frontend-service
            port:
              number: 80
